# ch-ir-indexer

./: .gitignore  Makefile.am  Makefile.in  README.md  ch-ir-common.h  ch-ir-indexer-compress.c  ch-ir-indexer-compress.h  ch-ir-indexer-main.c  ch-ir-indexer-pvt.c  ch-ir-indexer-pvt.h  ch-ir-indexer-serialize.c  ch-ir-indexer-serialize.h  ch-ir-indexer.c  ch-ir-indexer.h  ch-ir-indexing-server.c  ch-ir-indexing-server.h  ch-ir-tokenizer.c  ch-ir-tokenizer.h  configure  configure.ac
win/win32/ch-ir-indexer/: ch-ir-indexer.sln
win/win32/ch-ir-indexer/ch-ir-indexer/: ch-ir-indexer.vcxproj
