SUBDIRS = .
bin_PROGRAMS = ch-ir-indexer
ch_ir_indexer_SOURCES = ch-ir-indexer-main.c \
								ch-ir-common.h \
								ch-ir-indexer.c ch-ir-indexer.h \
								ch-ir-indexer-pvt.c ch-ir-indexer-pvt.h \
								ch-ir-indexer-serialize.c ch-ir-indexer-serialize.h \
								ch-ir-indexer-compress.c ch-ir-indexer-compress.h \
								ch-ir-tokenizer.c ch-ir-tokenizer.h \
								ch-ir-dir-parser.c ch-ir-dir-parser.h \
								porter.c porter.h
ACLOCAL_AMFLAGS = -I m4
